# AngryBirdsGame

./: AngrySpartyApp.cpp  AngrySpartyApp.h  CMakeLists.txt  README.md  main.cpp  pch.h
AngrySpartyLib/: AngrySparty.cpp  AngrySparty.h  Background.cpp  Background.h  Block.cpp  Block.h  CMakeLists.txt  Consts.h  DeadFoeCollector.cpp  DeadFoeCollector.h  DebugDraw.cpp  DebugDraw.h  Foe.cpp  Foe.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Goalpost.cpp  Goalpost.h  GruffSparty.cpp  GruffSparty.h  HelmetSparty.cpp  HelmetSparty.h  Item.cpp  Item.h  ItemBody.cpp  ItemBody.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  LevelFinishChecker.cpp  LevelFinishChecker.h  LimpetKillVisitor.cpp  LimpetKillVisitor.h  LimpetSparty.cpp  LimpetSparty.h  MainFrame.cpp  MainFrame.h  (+16 more)
Tests/: BackgroundTest.cpp  CMakeLists.txt  EmptyTest.cpp  GameTest.cpp  GruffSpartyTest.cpp  ItemTest.cpp  LevelTest.cpp  LimpetSpartyTest.cpp
levels/: level0.xml  level1.xml  level2.xml  level3.xml
levels/TestLevels/: basicLevel.xml  test.xml
test/: test.xml
